<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".activities.ActivityLogin">
    <ImageView
        android:layout_marginTop="110dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo"/>

    <EditText
        android:id="@+id/email"
        android:textSize="18dp"
        android:textColor="#BFDBE9"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:paddingLeft="0dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:hint="@string/login_email"
        android:textColorHint="#BFDBE9"
        android:drawablePadding="10dp"
        android:lines="1"
        android:scrollbars="none"
        android:drawableLeft="@drawable/login_mail"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_edittext"/>

    <EditText
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:textSize="18dp"
        android:textColor="#BFDBE9"
        android:layout_width="280dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="0dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/login_pass"
        android:textColorHint="#BFDBE9"
        android:drawablePadding="10dp"
        android:lines="1"
        android:scrollbars="none"
        android:drawableLeft="@drawable/login_pass"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_edittext"/>

    <Button
        android:id="@+id/login"
        android:text="@string/login_btn"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_login"/>

    <TextView
        android:id="@+id/rememberme"
        android:lines="1"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:textColor="#BFDBE9"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp"
        android:text="@string/login_rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
